--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@
   font-style: normal;
 }
 
+.inter-semibold {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
 .inter-bold {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -69,6 +76,14 @@
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-weight: 300;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
+.roboto-semibold {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
   font-style: normal;
   font-variation-settings: "wdth" 100;
 }
